etc/tests/error/type/strict-unknown-call.ny
;; flags: --strict-types
;; expect: hm-strict-dynamic-call
use std.core

does_not_exist_strict(1)
